--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=h1, initial-scale=C" />
     <title>Document</title>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>Contact us</h1>
@@ -12,8 +13,8 @@
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
-    <a href="/index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/" class="links">Homepage</a>
+    <a href="/photo.html" class="links">Photo</a>
+    <a href="/contact.html" class="links">Contact</a>
   </body>
 </html>
