--- a/photo.html
+++ b/photo.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>A picture of croissants</h1>
     <img src="/src/croissant.png" alt="Croissant" />
     <br />
-    <a href="/index.html">Homepage</a>
+    <a href="/">Homepage</a>
     <a href="/photo.html">Photo</a>
     <a href="/contact.html">Contact</a>
   </body>
