--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       are made of a layered yeast-leavened dough
     </p>
 
-    <a href="/index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/index.html" class="links">Homepage</a>
+    <a href="/photo.html" class="links">Photo</a>
+    <a href="/contact.html" class="links">Contact</a>
   </body>
 </html>
