--- a/photo.html
+++ b/photo.html
@@ -11,8 +11,8 @@
     <h1>A picture of croissants</h1>
     <img src="/src/croissant.png" alt="Croissant" />
     <br />
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/" class="links">Homepage</a>
+    <a href="/photo.html" class="links">Photo</a>
+    <a href="/contact.html" class="links">Contact</a>
   </body>
 </html>
