Implemented SEO in the website

--- a/contact.html
+++ b/contact.html
@@ -2,19 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Get in touch with us at Cornetto.com. We'd love to hear your feedback and to make our croissants even tastier."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=h1, initial-scale=C" />
-    <title>Document</title>
+    <title>Contact us - Cornetto.com</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>Contact us</h1>
     <p>
-      To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+      To contact Cornetto.com, please email us at
+      <a href="mailto:hello@croissant.com">hello@cornetto.com</a> for more info
     </p>
-    <a href="/" class="links">Homepage</a>
-    <a href="/photo.html" class="links">Photo</a>
-    <a href="/contact.html" class="links">Contact</a>
+
+    <a href="/index.html" class="links" title="Cornetto homepage"
+      >Introduction to croissants</a
+    >
+    <a href="/photo.html" class="links" title="Pictures of croissants"
+      >See how a croissant looks like</a
+    >
+    <a href="/contact.html" class="links" title="Contact us"
+      >Get in touch with us!</a
+    >
   </body>
 </html>
