--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Discover everything you didn't know about croissants. Learn about their ingredients, their taste, and much more."
+    />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <title>Introduction to croissants - Cornetto.com</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
@@ -15,8 +20,14 @@
       are made of a layered yeast-leavened dough
     </p>
 
-    <a href="/index.html" class="links">Homepage</a>
-    <a href="/photo.html" class="links">Photo</a>
-    <a href="/contact.html" class="links">Contact</a>
+    <a href="/index.html" class="links" title="Cornetto homepage"
+      >Introduction to croissants</a
+    >
+    <a href="/photo.html" class="links" title="Pictures of croissants"
+      >See how a croissant looks like</a
+    >
+    <a href="/contact.html" class="links" title="Contact us"
+      >Get in touch with us!</a
+    >
   </body>
 </html>
