--- a/photo.html
+++ b/photo.html
@@ -2,17 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Croissants look so tasty and yummy. After looking at them, you'll want to have them for breakfast every morning."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>How do croissants look like? - Cornetto.com</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
-    <h1>A picture of croissants</h1>
-    <img src="/src/croissant.png" alt="Croissant" />
+    <h1>How do croissants look like?</h1>
+    <img
+      src="/src/croissant.png"
+      alt="A whole croissant and one sliced in half"
+    />
     <br />
-    <a href="/" class="links">Homepage</a>
-    <a href="/photo.html" class="links">Photo</a>
-    <a href="/contact.html" class="links">Contact</a>
+
+    <a href="/index.html" class="links" title="Cornetto homepage"
+      >Introduction to croissants</a
+    >
+    <a href="/photo.html" class="links" title="Pictures of croissants"
+      >See how a croissant looks like</a
+    >
+    <a href="/contact.html" class="links" title="Contact us"
+      >Get in touch with us!</a
+    >
   </body>
 </html>
